resolve ArgoCD sync failures and API version issues

--- a/workouts-chart/templates/secret-store.yaml
+++ b/workouts-chart/templates/secret-store.yaml
@@ -1,7 +1,8 @@
-apiVersion: external-secrets.io/v1alpha1
+apiVersion: external-secrets.io/v1
 kind: SecretStore
 metadata:
   name: aws-secret-store
+  namespace: {{ .Values.global.destination.namespace }}
 spec:
   provider:
     aws:
