--- a/workouts-chart/templates/back-service.yaml
+++ b/workouts-chart/templates/back-service.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: {{ .Values.backend.appname }}
+  namespace: {{ .Values.global.destination.namespace }}
 spec:
   selector:
     app: {{ .Values.backend.appname }}
