--- a/workouts-chart/templates/configmap.yaml
+++ b/workouts-chart/templates/configmap.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
     name: {{ .Values.backend.configmap.name }}
+    namespace: {{ .Values.global.destination.namespace }}
 data:
     FRONTEND_ORIGIN: http://{{ index .Values.frontend.ingress.hosts 0 "host" }}:8000
     DB_HOST: {{ .Values.backend.configmap.env.DB_HOST }}
