--- a/workouts-chart/templates/external-secrets.yaml
+++ b/workouts-chart/templates/external-secrets.yaml
@@ -1,7 +1,8 @@
-apiVersion: external-secrets.io/v1beta1
+apiVersion: external-secrets.io/v1
 kind: ExternalSecret
 metadata:
   name: my-db-secret
+  namespace: {{ .Values.global.destination.namespace }}
 spec:
   secretStoreRef:
     name: aws-secret-store
