--- a/workouts-chart/templates/front-deployment.yaml
+++ b/workouts-chart/templates/front-deployment.yaml
@@ -2,6 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: {{ .Values.frontend.appname }}
+  namespace: {{ .Values.global.destination.namespace }}
 spec:
   replicas: {{ .Values.frontend.replicaCount }}
   selector:
