--- a/workouts-chart/templates/front-service.yaml
+++ b/workouts-chart/templates/front-service.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: {{ .Values.frontend.appname }}
+  namespace: {{ .Values.global.destination.namespace }}
 spec:
   type: {{ .Values.frontend.service.type }}
   ports:
