--- a/workouts-chart/templates/secret-store.yaml
+++ b/workouts-chart/templates/secret-store.yaml
@@ -8,3 +8,6 @@ spec:
     aws:
       service: SecretsManager
       region: us-east-1
+      auth:
+        podIdentity:
+          serviceAccount: external-secrets-sa
