--- a/workouts-chart/templates/external-secrets.yaml
+++ b/workouts-chart/templates/external-secrets.yaml
@@ -4,8 +4,13 @@ metadata:
   name: my-db-secret
   namespace: {{ .Values.global.destination.namespace }}
 spec:
+  refreshInterval: 1m
   secretStoreRef:
     name: aws-secret-store
+    kind: SecretStore
+  target:
+    name: my-db-secret
+    creationPolicy: Owner
   data:
     - secretKey: DB_PASSWORD
       remoteRef:
