fix sa and secrret store to use arn

--- a/workouts-chart/templates/secret-store.yaml
+++ b/workouts-chart/templates/secret-store.yaml
@@ -9,5 +9,5 @@ spec:
       service: SecretsManager
       region: us-east-1
       auth:
-        podIdentity:
+        jwt:
           serviceAccount: external-secrets-sa
