add arn secretmanager

--- a/workouts-chart/templates/secret-store.yaml
+++ b/workouts-chart/templates/secret-store.yaml
@@ -8,3 +8,7 @@ spec:
     aws:
       service: SecretsManager
       region: us-east-1
+      auth:
+        jwt:
+          serviceAccountRef:
+            name: external-secrets-sa
