--- a/workouts-chart/templates/front-deployment.yaml
+++ b/workouts-chart/templates/front-deployment.yaml
@@ -20,6 +20,9 @@ spec:
         image: {{ .Values.frontend.image.repository }}:{{ .Values.frontend.image.tag }}
         ports:
         - containerPort: {{ .Values.frontend.service.targetPort }}
+        env:
+        - name: VITE_API_BASE
+          value: "/api"
         resources:
           limits:
             memory: {{ .Values.frontend.resources.limits.memory }}
