Add AI-powered workout planner with individual exercise logging and enhanced UI

--- a/workouts-app/Backend/app/requirements.txt
+++ b/workouts-app/Backend/app/requirements.txt
@@ -6,5 +6,6 @@ itsdangerous
 passlib[bcrypt]
 sqlmodel
 psycopg2-binary
+groq>=0.4.1
 # Optional: psycopg2-binary (for PostgreSQL)
 # sqlalchemy (included with sqlmodel)
