--- a/workouts-chart/templates/external-secrets.yaml
+++ b/workouts-chart/templates/external-secrets.yaml
@@ -24,3 +24,7 @@ spec:
       remoteRef:
         key: postgres-circle
         property: ADMIN_TOKEN
+    - secretKey: OPENAI_API_KEY
+      remoteRef:
+        key: postgres-circle
+        property: OPENAI_API_KEY
