--- a/workouts-app/docker-compose.yml
+++ b/workouts-app/docker-compose.yml
@@ -35,6 +35,7 @@ services:
       DB_PASSWORD: workouts_password
       FRONTEND_ORIGIN: http://localhost:3000
       ADMIN_TOKEN: tokentest123
+      GROQ_API_KEY: ${GROQ_API_KEY:-your-groq-api-key-here}
     depends_on:
       db:
         condition: service_healthy
