--- a/workouts-chart/templates/back-deployment.yaml
+++ b/workouts-chart/templates/back-deployment.yaml
@@ -36,6 +36,11 @@ spec:
             secretKeyRef:
               name: my-db-secret
               key: ADMIN_TOKEN
+        - name: OPENAI_API_KEY
+          valueFrom:
+            secretKeyRef:
+              name: my-db-secret
+              key: OPENAI_API_KEY
         - name: DB_HOST
           valueFrom:
             configMapKeyRef:
