change ci test to give warnings for formating & updated groq api key in the helm chart

--- a/.github/workflows/circle-ci.yaml
+++ b/.github/workflows/circle-ci.yaml
@@ -58,10 +58,10 @@ jobs:
           pip install flake8 black isort
           # Lint Python code
           flake8 app/ --count --select=E9,F63,F7,F82 --show-source --statistics
-          # Check code formatting
-          black --check app/
-          # Check import sorting
-          isort --check-only app/
+          # Check code formatting (warn only, don't fail)
+          black --check app/ || echo "Code formatting issues found - please run 'black app/' locally"
+          # Check import sorting (warn only, don't fail)
+          isort --check-only app/ || echo "Import sorting issues found - please run 'isort app/' locally"
 
       - name: Run Backend Tests
         run: |
