typo fix in helm chart template

--- a/workouts-chart/templates/front-service.yaml
+++ b/workouts-chart/templates/front-service.yaml
@@ -9,7 +9,7 @@ metadata:
   annotations:
     prometheus.io/scrape: "{{ .Values.frontend.monitoring.enabled | default false }}"
     prometheus.io/port: "{{ .Values.frontend.service.targetPort }}"
-    prometheus.io/path: "{{ .Values.frontend.monitoring.metricsPath | default \"/metrics\" }}"
+    prometheus.io/path: "{{ .Values.frontend.monitoring.metricsPath | default "/metrics" }}"
 spec:
   type: {{ .Values.frontend.service.type }}
   ports:
