--- a/workouts-chart/templates/back-deployment.yaml
+++ b/workouts-chart/templates/back-deployment.yaml
@@ -17,7 +17,7 @@ spec:
       annotations:
         prometheus.io/scrape: "{{ .Values.backend.monitoring.enabled | default true }}"
         prometheus.io/port: "{{ .Values.backend.service.port }}"
-        prometheus.io/path: "{{ .Values.backend.monitoring.metricsPath | default \"/metrics\" }}"
+        prometheus.io/path: "{{ .Values.backend.monitoring.metricsPath | default "/metrics" }}"
     spec:
       securityContext:
         runAsNonRoot: true
