--- a/workouts-chart/templates/back-service.yaml
+++ b/workouts-chart/templates/back-service.yaml
@@ -9,7 +9,7 @@ metadata:
   annotations:
     prometheus.io/scrape: "{{ .Values.backend.monitoring.enabled | default true }}"
     prometheus.io/port: "{{ .Values.backend.service.port }}"
-    prometheus.io/path: "{{ .Values.backend.monitoring.metricsPath | default \"/metrics\" }}"
+    prometheus.io/path: "{{ .Values.backend.monitoring.metricsPath | default "/metrics" }}"
 spec:
   selector:
     app: {{ .Values.backend.appname }}
