fix helm template yaml parsing error - remove default function with escaped quotes

--- a/workouts-chart/templates/front-deployment.yaml
+++ b/workouts-chart/templates/front-deployment.yaml
@@ -17,7 +17,7 @@ spec:
       annotations:
         prometheus.io/scrape: "{{ .Values.frontend.monitoring.enabled | default false }}"
         prometheus.io/port: "{{ .Values.frontend.service.targetPort }}"
-        prometheus.io/path: "{{ .Values.frontend.monitoring.metricsPath | default \"/metrics\" }}"
+        prometheus.io/path: "{{ .Values.frontend.monitoring.metricsPath }}"
     spec:
       securityContext:
         runAsNonRoot: true
