--- a/workouts-app/Frontend/package.json
+++ b/workouts-app/Frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "workouts-frontend",
+  "name": "fitforge-frontend",
   "version": "0.1.0",
   "private": true,
   "type": "module",
@@ -13,28 +13,30 @@
     "type-check": "tsc --noEmit"
   },
   "dependencies": {
+    "date-fns": "^4.1.0",
+    "lucide-react": "^0.544.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "react-router-dom": "6.26.2"
+    "react-router-dom": "6.26.2",
+    "recharts": "^3.2.0"
   },
   "devDependencies": {
-    "@vitejs/plugin-react": "4.3.3",
+    "@testing-library/jest-dom": "^6.0.0",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^14.4.0",
     "@types/react": "18.3.12",
     "@types/react-dom": "18.3.1",
-    "typescript": "5.6.3",
-    "vite": "5.4.8",
-    "vitest": "^1.0.0",
-    "@vitest/coverage-v8": "^1.0.0",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/jest-dom": "^6.0.0",
-    "@testing-library/user-event": "^14.4.0",
-    "jsdom": "^22.0.0",
-    "eslint": "^8.0.0",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
+    "@vitejs/plugin-react": "4.3.3",
+    "@vitest/coverage-v8": "^1.0.0",
+    "eslint": "^8.0.0",
     "eslint-plugin-react": "^7.33.0",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.0"
+    "eslint-plugin-react-refresh": "^0.4.0",
+    "jsdom": "^22.0.0",
+    "typescript": "5.6.3",
+    "vite": "5.4.8",
+    "vitest": "^1.0.0"
   }
 }
-
