--- a/.github/workflows/circle-ci.yaml
+++ b/.github/workflows/circle-ci.yaml
@@ -124,6 +124,10 @@ jobs:
             echo "ecr_repo=prod-circle-repo" >> $GITHUB_OUTPUT
             echo "ecr_registry=992382853618.dkr.ecr.us-east-1.amazonaws.com/prod-circle-repo" >> $GITHUB_OUTPUT
             echo "api_base=https://app.eitanp.shop" >> $GITHUB_OUTPUT
+          elif [[ "${{ github.ref_name }}" == "staging" ]]; then
+            echo "ecr_repo=staging-circle-repo" >> $GITHUB_OUTPUT
+            echo "ecr_registry=992382853618.dkr.ecr.us-east-1.amazonaws.com/staging-circle-repo" >> $GITHUB_OUTPUT
+            echo "api_base=https://staging-app.eitanp.shop" >> $GITHUB_OUTPUT
           else
             echo "ecr_repo=dev-circle-repo" >> $GITHUB_OUTPUT
             echo "ecr_registry=992382853618.dkr.ecr.us-east-1.amazonaws.com/dev-circle-repo" >> $GITHUB_OUTPUT
@@ -174,7 +178,7 @@ jobs:
             ecr_repo="prod-circle-repo"
           elif [[ "${{ github.ref_name }}" == "staging" ]]; then
             env_dir="staging"
-            ecr_repo="dev-circle-repo"
+            ecr_repo="staging-circle-repo"
           elif [[ "${{ github.ref_name }}" == "prod" ]]; then
             env_dir="prod"
             ecr_repo="prod-circle-repo"
